# charter

./: .gitignore  CODE_OF_CONDUCT.md  README.md  meson.build
gallery/: ex2.crt  ex3.crt  ex4.crt  ex5.crt  ex6.crt  ex8.crt  ex9.crt
src/: charter.c  charter.h  charter_string.c  charter_string.h  latex.c  main_svg.c  main_tex.c  parser.c  renderer.c  renderer.h  svg.c  svg_utils.c
test/: data.csv  main.c  plot.html  test.crt  test.html  test.md
